# core

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  TODO  core.code-workspace
cmake/: config.cmake  developer_mode.cmake  options.cmake  prelude.cmake  tools.cmake
cmake/install/: config.cmake  rules.cmake
cmake/presets/: common.json  flags.json
code/include/golxzn/: core.hpp
code/include/golxzn/core/: aliases.hpp  constants.hpp  geometry.hpp  math.hpp  matrix.hpp  point.hpp  strutils.hpp  traits.hpp  transform.hpp  types.hpp  utils.hpp
code/include/golxzn/core/geometry/: transform.hpp  transform2D.hpp  transform3D.hpp
code/include/golxzn/core/math/: angle.hpp  matrix.hpp  point.hpp  vector.hpp
code/include/golxzn/core/resources/: manager.hpp
code/include/golxzn/core/types/: angle.hpp  clock.hpp  color.hpp  image.hpp  rectangle.hpp  time.hpp
code/include/golxzn/core/utils/: algorithm.hpp  error.hpp  instantiated.hpp  numeric.hpp  random.hpp  reference.hpp  strutils.hpp  traits.hpp
code/src/golxzn/core/: just_.cpp
code/src/golxzn/core/geometry/: transform2D.cpp  transform3D.cpp
code/src/golxzn/core/resources/: manager.cpp
code/src/golxzn/core/types/: clock.cpp  color.cpp  image.cpp
dependencies/: import.cmake
dependencies/stb_image/: CMakeLists.txt
dependencies/stb_image/include/: stb_image.h  stb_image_write.h
dependencies/stb_image/src/: stb_image.cpp  stb_image_write.cpp
tests/: CMakeLists.txt
tests/sources/: TestColor.cpp  TestImage.cpp  TestMatrix.cpp  TestPoint.cpp  TestResourceManager.cpp  TestTransform.cpp
